--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="keywords" content="Путешествия по России, путешествия на поездах, Куршская Коса, Байкал, Кольский, Алтай, Карелия, Сибирь">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
-    <link href="pages/index.css" rel="stylesheet">
+    <link href="./pages/index.css" rel="stylesheet">
   </head>
-  <body class="page centering">
+  <body class="page">
     <header class="header centering">                                                  <!--СЕКЦИЯ HEADER. НАЧАЛО-->
-      <img class="header__logo" src="images/header-logo.svg" alt="Логотип сайта">
+      <img class="header__logo" src="./images/header-logo.svg" alt="Логотип сайта">
       <div class="header__lang-links">
-        <a class="header__lang-link" href="#">Ru</a>
+        <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
         <a class="header__lang-link" href="#">En</a>
       </div>
     </header>                                                                          <!--СЕКЦИЯ HEADER. КОНЕЦ-->
@@ -23,11 +23,11 @@
         <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
         <figure class="lead__figcap">
           <img 
-          class="lead__image"
-          src="images/lead-polka.jpg"
-          alt="Изображение карты маршрута"
+            class="lead__image"
+            src="./images/lead-polka.jpg"
+            alt="Изображение карты маршрута"
           >
-          <figcaption class="lead__caption">ВАША ПОЛКА-ВЕРХНЯЯ</figcaption>
+          <figcaption class="lead__caption">Ваша полка-верхняя</figcaption>
         </figure>
       </section>                                                                       <!--СЕКЦИЯ LEAD. КОНЕЦ-->
       <section class="intro centering">                                                <!--СЕКЦИЯ INTRO. НАЧАЛО-->
@@ -42,33 +42,33 @@
         </ul>
       </section>                                                                       <!--СЕКЦИЯ INTRO. КОНЕЦ-->
       <div class="photo-grid centering"><!--ЗДЕСЬ ВМЕСТО SECTION СТОИТ DIV, ТАК КАК НЕ ПУСКАЕТ ВАЛИДАТОР БЕЗ ТЕГА ЗАГОЛОВКА. СЕКЦИЯ PHOTO-GRID. НАЧАЛО-->
-        <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Изображение вида из окна поезда">
-        <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Изображение Атарвы Тулси">
-        <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Изображение Гор">
-        <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="Изображение Сочи">
-        <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="Изображение автомобиля на льду">
-        <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="Изображение Байкала">
-        <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="Изображение Эльбруса">
-        <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="Кондратьева">
-        <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="Изображение Камчатки">
-        <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Изображение Камчатки">
-        <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Изображение Байкала">
-        <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Изображение горной системы Ергаки">
+        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Изображение вида из окна поезда">
+        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Изображение Атарвы Тулси">
+        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Изображение Гор">
+        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Изображение Сочи">
+        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Изображение автомобиля на льду">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Изображение Байкала">
+        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Изображение Эльбруса">
+        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Кондратьева">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Изображение Камчатки">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Изображение Камчатки">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Изображение Байкала">
+        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Изображение горной системы Ергаки">
       </div>                                                                        <!--СЕКЦИЯ PHOTO-GRID. КОНЕЦ-->
       <section class="places centering">                                                <!--СЕКЦИЯ PLACES. НАЧАЛО-->
         <div class="place">
           <div class="place__upper-flex-container">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
-              <h3 class="place__url-heading">URL</h3>
-              <a class="place__link" href="http://park-kosa.ru" target="_blank">http://park-kosa.ru</a>
+              <p class="place__url-heading">Url</p>
+              <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
             </div>
           </div>
           <div class="place__lower-flex-container">
             <div class="place__image-container">
               <img
               class="place__image" 
-              src="images/place-kosa.jpg" 
+              src="./images/place-kosa.jpg" 
               alt="Куршская Коса"
               >
             </div>
@@ -82,7 +82,7 @@
           <div class="place__upper-flex-container">
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
-              <h3 class="place__url-heading">URL</h3>
+              <p class="place__url-heading">Url</p>
               <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
             </div>
           </div>
@@ -90,7 +90,7 @@
             <div class="place__image-container">
               <img
               class="place__image" 
-              src="images/place-kolsky.jpg" 
+              src="./images/place-kolsky.jpg" 
               alt="Кольский"
               >
             </div>
@@ -106,7 +106,7 @@
           <div class="place__upper-flex-container">
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
-              <h3 class="place__url-heading">URL</h3>
+              <p class="place__url-heading">Url</p>
               <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
             </div>
           </div>
@@ -114,7 +114,7 @@
             <div class="place__image-container">
              <img
              class="place__image" 
-             src="images/place-altai.jpg" 
+             src="./images/place-altai.jpg" 
              alt="Алтай"
              >
             </div> 
@@ -129,7 +129,7 @@
           <div class="place__upper-flex-container">
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
-              <h3 class="place__url-heading">URL</h3>
+              <p class="place__url-heading">Url</p>
               <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
             </div>
           </div>
@@ -137,7 +137,7 @@
             <div class="place__image-container">
              <img
              class="place__image" 
-             src="images/place-winter-baikal.jpg" 
+             src="./images/place-winter-baikal.jpg" 
              alt="Зимний Байкал"
              >
             </div> 
@@ -153,7 +153,7 @@
           <div class="place__upper-flex-container">
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
-              <h3 class="place__url-heading">URL</h3>
+              <p class="place__url-heading">Url</p>
               <a class="place__link" href="http://vodlozero.ru/" target="_blank">http://vodlozero.ru/</a>
             </div>
           </div>
@@ -161,7 +161,7 @@
             <div class="place__image-container">
              <img
              class="place__image" 
-             src="images/place-karelia.jpg" 
+             src="./images/place-karelia.jpg" 
              alt="Карелия"
              >
             </div> 
@@ -171,13 +171,12 @@
           </div>
         </div>          
       </section>                                                                                             <!--СЕКЦИЯ PLACES. КОНЕЦ-->
-      <a class="cover" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">               <!--СЕКЦИЯ COVER. НАЧАЛО-->
-      <img class="cover__image" src="images/cover-trains.jpg" alt="Изображение железнодорожной станции">
-      <div class="cover__wrapper">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h3>
-      </div>
-      </a>                                                                                   <!--СЕКЦИЯ COVER. КОНЕЦ-->
+      <section class="cover centering">                                                             <!--СЕКЦИЯ COVER. НАЧАЛО-->
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h3>
+        </a>
+      </section>                                                                                   <!--СЕКЦИЯ COVER. КОНЕЦ-->
     </main>                                                                                  <!--СЕКЦИЯ MAIN. КОНЕЦ-->
     <footer class="footer centering">                                                        <!--СЕКЦИЯ FOOTER. НАЧАЛО-->
       <nav class="footer__links">
