--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             src="./images/lead-polka.jpg"
             alt="Изображение карты маршрута"
           >
-          <figcaption class="lead__caption">Ваша полка-верхняя</figcaption>
+          <figcaption class="lead__caption">Ваша полка - верхняя</figcaption>
         </figure>
       </section>                                                                       <!--СЕКЦИЯ LEAD. КОНЕЦ-->
       <section class="intro centering">                                                <!--СЕКЦИЯ INTRO. НАЧАЛО-->
@@ -41,7 +41,7 @@
           <li><span class="intro__span-accent">Аэропортов</span> 241</li>
         </ul>
       </section>                                                                       <!--СЕКЦИЯ INTRO. КОНЕЦ-->
-      <div class="photo-grid centering"><!--ЗДЕСЬ ВМЕСТО SECTION СТОИТ DIV, ТАК КАК НЕ ПУСКАЕТ ВАЛИДАТОР БЕЗ ТЕГА ЗАГОЛОВКА. СЕКЦИЯ PHOTO-GRID. НАЧАЛО-->
+      <section class="photo-grid centering">
         <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Изображение вида из окна поезда">
         <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Изображение Атарвы Тулси">
         <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Изображение Гор">
@@ -54,7 +54,7 @@
         <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Изображение Камчатки">
         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Изображение Байкала">
         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Изображение горной системы Ергаки">
-      </div>                                                                        <!--СЕКЦИЯ PHOTO-GRID. КОНЕЦ-->
+      </section>                                                                        <!--СЕКЦИЯ PHOTO-GRID. КОНЕЦ-->
       <section class="places centering">                                                <!--СЕКЦИЯ PLACES. НАЧАЛО-->
         <div class="place">
           <div class="place__upper-flex-container">
